--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@types/node": "10.12.24",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "http-proxy-middleware": "^0.19.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "react": "^16.8.1",
@@ -28,6 +29,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "proxy": "http://localhost:8999/"
+  ]
 }
