--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.7",
     "@types/jest": "24.0.0",
     "@types/node": "10.12.24",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "classnames": "^2.2.6",
     "http-proxy-middleware": "^0.19.1",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
