--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "ws": "^6.1.3"
   },
   "devDependencies": {
+    "@types/uuid": "^3.4.4",
     "@types/express": "^4.16.1",
     "@types/ws": "^6.0.1",
     "ts-node": "^8.0.2",
